--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "es6-promise": "^4.2.8",
     "rollup": "^2.67.1",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "tslib": "^2.4.0"
   },
   "dependencies": {
     "base64-js": "^1.5.1",
