--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "exclude": ["node_modules", "**/node_modules/*", "examples"]
 }
