--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "scripts": {
     "build": "rollup --config --configPlugin typescript",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
@@ -30,12 +31,17 @@
     "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.0",
+    "@types/jest": "^28.1.6",
+    "@types/jscodeshift": "^0.11.5",
     "@types/node": "^18.0.3",
     "es6-promise": "^4.2.8",
+    "jest": "^28.1.3",
+    "jscodeshift": "^0.13.1",
     "rollup": "^2.67.1",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.5.5",
-    "tslib": "^2.4.0"
+    "ts-jest": "^28.0.7",
+    "tslib": "^2.4.0",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
     "base64-js": "^1.5.1",
