--- a/.github/workflows/generateDraftRelease.yml
+++ b/.github/workflows/generateDraftRelease.yml
@@ -20,6 +20,8 @@ jobs:
       with:
         node-version: 18
         cache: 'npm'
+    - run: npm ci
+    - run: npm run build --if-present
     - name: 👀 Retrieve Keycloak-js version
       run: |
         echo "::set-output name=VERSION::$(npm view keycloak-js version)"
