--- a/.github/workflows/generateDraftPR.yml
+++ b/.github/workflows/generateDraftPR.yml
@@ -37,7 +37,7 @@ jobs:
       id: keycloak-repo
     - name: 🤖 Replace keycloak-js implementation
       run: |
-        cp keycloak/adapters/oidc/js/src/keycloak.js src/keycloak.js
+        cp -a keycloak/adapters/oidc/js/src/. src/
         rm -rf keycloak
         npx jscodeshift -t update-keycloak.ts src/keycloak.js
         npm version ${{ steps.keycloak-original.outputs.VERSION }} --git-tag-version false --allow-same-version true
