--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rollup": "^2.67.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
     "typescript": "^4.5.5"
   },
