--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "es6-promise": "^4.2.8",
     "jest": "^28.1.3",
     "jscodeshift": "^0.13.1",
+    "momoa-estree-ast": "^1.0.0",
     "rollup": "^2.67.1",
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
     "typescript": "^4.5.5"
   },
