--- a/.github/workflows/generateDraftPR.yml
+++ b/.github/workflows/generateDraftPR.yml
@@ -42,7 +42,7 @@ jobs:
         npx ts-node update-packageJsonScript.ts -- package.json keycloak/adapters/oidc/js/package.json
         rm -rf keycloak
         npx jscodeshift -t update-keycloak.ts src/keycloak.js
-        npx jscodeshift -t update-adapterTypes.ts keycloak.d.ts
+        npx jscodeshift -t update-adapterTypes.ts dist/keycloak.d.ts
         npm install
         npm version ${{ steps.keycloak-original.outputs.VERSION }} --git-tag-version false --allow-same-version true
         npm run build
