--- a/.github/workflows/releasePackage.yml
+++ b/.github/workflows/releasePackage.yml
@@ -1,4 +1,4 @@
-name: Publish keycloak-capacitor to NPM & Github
+name: Publish keycloak-capacitor to NPM
 on:
 # Trigger fetch on demand
   repository_dispatch:
@@ -18,15 +18,3 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-  publishOnGithub:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
-          registry-url: 'https://npm.pkg.github.com'
-      - run: npm ci
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
