chore: @rollup/plugin-terser

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@rollup/plugin-inject": "^5.0.3",
         "@rollup/plugin-node-resolve": "^15.0.2",
         "@rollup/plugin-typescript": "^11.1.0",
+        "@rollup/plugin-terser": "^0.4.1",
         "@types/jest": "^29.5.1",
         "@types/jscodeshift": "^0.11.6",
         "@types/node": "^18.15.13",
@@ -39,7 +40,6 @@
         "jscodeshift": "^0.14.0",
         "momoa-estree-ast": "^1.0.0",
         "rollup": "^3.20.7",
-        "rollup-plugin-terser": "^7.0.2",
         "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
         "tslib": "^2.4.0",
