--- a/.github/workflows/generateDraftPR.yml
+++ b/.github/workflows/generateDraftPR.yml
@@ -15,24 +15,26 @@ on:
 jobs:
   detect_version:
     runs-on: ubuntu-latest
+    outputs:
+      KEYCLOAK_VERSION: ${{ steps.set_version.outputs.KEYCLOAK_VERSION }}
     steps:
-      - name: 📨 Use provided Keycloak-js version
-        if: ${{ github.event.inputs.keycloak_version != '' }}
-        run: |
-          echo "KEYCLOAK_VERSION=${{ github.event.inputs.keycloak_version }}" >> $GITHUB_OUTPUT
       - name: 🛎️ Checkout
-        if: ${{ github.event.inputs.keycloak_version == '' }}
         uses: actions/checkout@v3
       - name: 🔨 Use Node.js 18.x
-        if: ${{ github.event.inputs.keycloak_version == '' }}
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
       - name: 👀 Retrieve Keycloak-js version
-        if: ${{ github.event.inputs.keycloak_version == '' }}
+        shell: bash
+        id: set_version
         run: |
-          echo "KEYCLOAK_VERSION=$(npm view keycloak-js version)" >> $GITHUB_OUTPUT
+          if [[ -z "${{ github.event.inputs.keycloak_version }}" ]]; then
+            export KEYCLOAK_VERSION=$(npm view keycloak-js version)
+          else
+            export KEYCLOAK_VERSION=${{ github.event.inputs.keycloak_version }}
+          fi
+          echo "KEYCLOAK_VERSION=${KEYCLOAK_VERSION}" >> $GITHUB_ENV
   build:
     runs-on: ubuntu-latest
     needs: detect_version
