ci: update script

--- a/.github/workflows/generateDraftPR.yml
+++ b/.github/workflows/generateDraftPR.yml
@@ -38,8 +38,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: detect_version
-    env:
-      KEYCLOAK_VERSION: "${{ needs.detect_version.outputs.KEYCLOAK_VERSION }}"
     steps:
     - name: 🛎️ Checkout
       uses: actions/checkout@v3
@@ -50,9 +48,9 @@ jobs:
         cache: 'npm'
     - name: 🚧 Installation
       run: npm ci
-    - name: 📥 Git clone Keycloak-js@${{ env.KEYCLOAK_VERSION }}
+    - name: 📥 Git clone Keycloak-js@${{ needs.detect_version.outputs.KEYCLOAK_VERSION }}
       run: |
-        git clone -b ${{ env.KEYCLOAK_VERSION }}  --depth 1  https://github.com/keycloak/keycloak.git
+        git clone -b ${{ needs.detect_version.outputs.KEYCLOAK_VERSION }} --depth 1  https://github.com/keycloak/keycloak.git
     - name: Get Keycloak last commit ID
       run: |
         cd keycloak
@@ -70,20 +68,20 @@ jobs:
     - name: 💅 Prepare release
       run: |
         npm install
-        npm version ${{ env.KEYCLOAK_VERSION }} --git-tag-version false --allow-same-version true
+        npm version ${{ needs.detect_version.outputs.KEYCLOAK_VERSION }} --git-tag-version false --allow-same-version true
         npm run build  
     - name: Create Pull Request
       id: cpr
       uses: peter-evans/create-pull-request@v4.0.4
       with:
-        commit-message: "[auto-updater] update Keycloak to ${{ env.KEYCLOAK_VERSION }}"
-        branch: "keycloak/${{ env.KEYCLOAK_VERSION }}"
-        title: "Update Keycloak.js to ${{ env.KEYCLOAK_VERSION }}"
+        commit-message: "[auto-updater] update Keycloak to ${{ needs.detect_version.outputs.KEYCLOAK_VERSION }}"
+        branch: "keycloak/${{ needs.detect_version.outputs.KEYCLOAK_VERSION }}"
+        title: "Update Keycloak.js to ${{ needs.detect_version.outputs.KEYCLOAK_VERSION }}"
         body: |
           Checklist before release : 
           - Pull latest version of Keycloak-js ✅
           - Add automatically the 2 Capacitor adapters ✅
-          - Update keycloak-capacitor version to ${{ env.KEYCLOAK_VERSION }} ✅
+          - Update keycloak-capacitor version to ${{ needs.detect_version.outputs.KEYCLOAK_VERSION }} ✅
           - Update package.json & refresh (dev)dependancies ✅
           - Review other changes (testing of examples folder) 🤷
 
