--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "keycloak-capacitor",
-    "version": "22.0.0",
+    "version": "23.0.0",
     "description": "Keycloak adapter for Ionicframework with Capacitor support.",
     "main": "dist/keycloak.js",
     "module": "dist/keycloak.mjs",
@@ -27,11 +27,11 @@
         "keycloak"
     ],
     "devDependencies": {
-        "@rollup/plugin-commonjs": "^25.0.2",
-        "@rollup/plugin-inject": "^5.0.3",
-        "@rollup/plugin-node-resolve": "^15.1.0",
-        "@rollup/plugin-typescript": "^11.1.2",
-        "@rollup/plugin-terser": "^0.4.3",
+        "@rollup/plugin-commonjs": "^25.0.7",
+        "@rollup/plugin-inject": "^5.0.5",
+        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-typescript": "^11.1.5",
+        "@rollup/plugin-terser": "^0.4.4",
         "@types/jest": "^29.5.1",
         "@types/jscodeshift": "^0.11.6",
         "@types/node": "^18.15.13",
@@ -39,7 +39,7 @@
         "jest": "^29.5.0",
         "jscodeshift": "^0.14.0",
         "momoa-estree-ast": "^1.0.0",
-        "rollup": "^3.26.2",
+        "rollup": "^4.5.1",
         "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
         "tslib": "^2.4.0",
@@ -47,7 +47,8 @@
     },
     "dependencies": {
         "base64-js": "^1.5.1",
-        "js-sha256": "^0.9.0"
+        "js-sha256": "^0.10.1",
+        "jwt-decode": "^4.0.0"
     },
     "author": "jy95",
     "license": "Apache-2.0",
